syntax = "proto3";

package organizations.messages.v1;

option go_package = "messages/v1";

message ListMeOrganizationMembershipsRequest {}
